# bitcoin-sentiment-trader-performance

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  data-validation.yml  docs-build.yml
configs/: base.yaml  logging.yaml
configs/data/: fear_greed.yaml  trader_history.yaml
configs/environments/: local.yaml  production.yaml  staging.yaml
configs/pipelines/: eda.yaml  feature_engineering.yaml  ingestion.yaml  ml.yaml  preprocessing.yaml  reporting.yaml  statistics.yaml  validation.yaml
data/metadata/data_dictionary/: feature_store_20260701_103336.json  feature_store_20260701_103421.json  feature_store_20260701_103514.json  (+18 more)
docker/: Dockerfile  docker-compose.yml
docs/: VERIFICATION_REPORT.md  architecture.md  data_dictionary.md  index.md  methodology.md  phased_execution_plan.md
docs/api_reference/: index.html  search.js  sentiment_trader_analytics.html
docs/phases/: phase_01_data_ingestion.md  phase_02_data_validation.md  phase_03_preprocessing.md  phase_04_feature_engineering.md  phase_05_eda.md  phase_06_statistical_analysis.md  phase_07_business_insights.md  phase_08_machine_learning.md  phase_09_reporting.md  phase_10_documentation.md  phase_11_testing_release.md
environment/: conda.yaml
notebooks/04_eda/: 04_01_sentiment_distribution.ipynb  04_02_trader_pnl_distribution.ipynb  04_03_correlation_analysis.ipynb  04_04_time_series_analysis.ipynb
notebooks/07_business_insights/: 07_01_sentiment_pnl_insights.ipynb
pipelines/: generate_presentation_assets.py  run_eda_pipeline.py  run_feature_pipeline.py  run_full_pipeline.py  run_ingestion_pipeline.py  run_ml_pipeline.py  run_preprocessing_pipeline.py  run_reporting_pipeline.py  run_statistical_pipeline.py  run_validation_pipeline.py
scripts/: download_data.sh  scratch_update_notebook.py  setup_env.sh
src/sentiment_trader_analytics/: __init__.py
tests/: conftest.py
tests/fixtures/: fear_greed_bad_columns.csv  fear_greed_duplicate_dates.csv  fear_greed_invalid.csv  fear_greed_sample.csv  fear_greed_valid.csv  trader_history_duplicate_trade_id.csv  trader_history_invalid.csv  trader_history_null_account.csv  trader_history_sample.csv  trader_history_valid.csv
tests/integration/: test_full_pipeline.py
tests/unit/: test_business.py  test_config.py  test_eda.py  test_extended_analyses.py  test_feature_engineering.py  test_ingestion.py  test_ml.py  test_preprocessing.py  test_statistics.py  test_utils.py  test_validation.py
(+170 files in other folders)
