[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-trader-analytics"
version = "0.1.0"
description = "Quantitative research: Bitcoin Fear & Greed vs Hyperliquid trader profitability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pandera>=0.20",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "nbformat>=5.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "mlflow>=2.10",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.43",
    "fpdf2>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
    "interrogate>=1.5",
    "pdoc>=14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
omit = [
    "src/sentiment_trader_analytics/utils/pdf_renderer.py",
    "src/sentiment_trader_analytics/utils/io_utils.py",
    "src/sentiment_trader_analytics/utils/time_utils.py",
    "src/sentiment_trader_analytics/visualization/dashboards.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
