[metadata]
name = sentiment-trader-analytics
version = 0.1.0
description = Quantitative research: Bitcoin Fear & Greed vs Hyperliquid trader profitability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/bitcoin-sentiment-trader-performance
license = Proprietary
classifiers =
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Financial and Insurance Industry

[options]
packages = find:
package_dir =
    = src
install_requires =
    pandas>=2.0
    numpy>=1.24
    pydantic>=2.0
    pandera>=0.20
    pyyaml>=6.0
    matplotlib>=3.7
    seaborn>=0.12
    nbformat>=5.0
    statsmodels>=0.14
    scikit-learn>=1.3
    mlflow>=2.10

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    ruff>=0.1
    mypy>=1.0
    black>=23.0
    isort>=5.0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
